--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   get: ^4.6.6
   freezed: ^2.5.2
   freezed_annotation: ^2.4.1
+  flutter_platform_widgets: ^6.1.0
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -24,38 +26,106 @@ dev_dependencies:
 
   flutter_lints: ^3.0.0
   build_runner: ^2.4.9
+  json_serializable: ^6.7.1
 
 flutter:
-
   uses-material-design: true
+  assets:
+    - assets/images/
+#   fonts:
+#     - family: SF Pro Display
+#       fonts:
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-Ultralight.otf
+#           weight: 100
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-UltralightItalic.otf
+#           weight: 100
+#           style: italic
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-Thin.otf
+#           weight: 200
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-ThinItalic.otf
+#           weight: 200
+#           style: italic
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-Light.otf
+#           weight: 300
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-LightItalic.otf
+#           weight: 300
+#           style: italic
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-Regular.otf
+#           weight: 400
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-RegularItalic.otf
+#           weight: 400
+#           style: italic
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-Medium.otf
+#           weight: 500
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-MediumItalic.otf
+#           weight: 500
+#           style: italic
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-Semibold.otf
+#           weight: 600
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-SemiboldItalic.otf
+#           weight: 600
+#           style: italic
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-Bold.otf
+#           weight: 700
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-BoldItalic.otf
+#           weight: 700
+#           style: italic
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-Heavy.otf
+#           weight: 800
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-HeavyItalic.otf
+#           weight: 800
+#           style: italic
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-Black.otf
+#           weight: 900
+#         - asset: fonts/SF-Pro-Display/SF-Pro-Display-BlackItalic.otf
+#           weight: 900
+#           style: italic
+#     - family: SF Pro Text
+#       fonts:
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-Ultralight.otf
+#           weight: 100
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-UltralightItalic.otf
+#           weight: 100
+#           style: italic
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-Thin.otf
+#           weight: 200
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-ThinItalic.otf
+#           weight: 200
+#           style: italic
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-Light.otf
+#           weight: 300
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-LightItalic.otf
+#           weight: 300
+#           style: italic
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-Regular.otf
+#           weight: 400
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-RegularItalic.otf
+#           weight: 400
+#           style: italic
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-Medium.otf
+#           weight: 500
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-MediumItalic.otf
+#           weight: 500
+#           style: italic
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-Semibold.otf
+#           weight: 600
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-SemiboldItalic.otf
+#           weight: 600
+#           style: italic
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-Bold.otf
+#           weight: 700
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-BoldItalic.otf
+#           weight: 700
+#           style: italic
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-Heavy.otf
+#           weight: 800
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-HeavyItalic.otf
+#           weight: 800
+#           style: italic
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-Black.otf
+#           weight: 900
+#         - asset: fonts/SF-Pro-Text/SF-Pro-Text-BlackItalic.otf
+#           weight: 900
+#           style: italic
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
